fixed alignment of navbar elements

--- a/application/frontend/src/components/NavBar.css
+++ b/application/frontend/src/components/NavBar.css
@@ -1,6 +1,7 @@
 .navbar{
     display: grid;
     grid-template-columns: 3;
+    justify-items: center;
 }
 .navbar-left{
     justify-self: center;
