--- a/application/frontend/src/components/SearchBar.css
+++ b/application/frontend/src/components/SearchBar.css
@@ -1,13 +1,11 @@
+.search_and_search_results_container{
+    
+}
+
 .search-results-overlay{
     background-color: yellow;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    align-content: center;
     width: 100%;
-    height: 100%;
-    list-style: none;
-    display: flex;
+    z-index: 100;
 }
 
 .search-results-overlay ul{
